crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@function_as_expression.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/function_as_expression.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "" ]
    4 [ label = "" ]
    5 [ label = "" ]
    6 [ label = "" ]
    7 [ label = "" ]
    8 [ label = "" ]
    9 [ label = "" ]
    10 [ label = "" ]
    11 [ label = "" ]
    12 [ label = "" ]
    13 [ label = "" ]
    14 [ label = "" ]
    15 [ label = "" ]
    16 [ label = "" ]
    17 [ label = "" ]
    18 [ label = "" ]
    19 [ label = "" ]
    20 [ label = "" ]
    21 [ label = "" ]
    22 [ label = "" ]
    23 [ label = "" ]
    24 [ label = "" ]
    25 [ label = "" ]
    26 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    0 -> 2 [ label = Normal ]
    2 -> 3 [ label = NewFunction ]
    2 -> 4 [ label = Normal ]
    4 -> 5 [ label = NewFunction ]
    4 -> 6 [ label = Normal ]
    6 -> 7 [ label = NewFunction ]
    6 -> 8 [ label = Normal ]
    8 -> 9 [ label = NewFunction ]
    8 -> 10 [ label = Normal ]
    10 -> 11 [ label = NewFunction ]
    10 -> 12 [ label = Normal ]
    12 -> 13 [ label = NewFunction ]
    12 -> 14 [ label = Normal ]
    14 -> 15 [ label = NewFunction ]
    14 -> 16 [ label = Normal ]
    16 -> 17 [ label = Normal ]
    16 -> 18 [ label = Normal ]
    17 -> 18 [ label = Normal ]
    18 -> 19 [ label = NewFunction ]
    18 -> 20 [ label = Normal ]
    20 -> 21 [ label = Normal ]
    20 -> 22 [ label = Normal ]
    21 -> 22 [ label = Normal ]
    22 -> 23 [ label = NewFunction ]
    22 -> 24 [ label = Normal ]
    24 -> 25 [ label = NewFunction ]
    24 -> 26 [ label = Normal ]
}
