crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@if_else.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/if_else.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "" ]
    4 [ label = "return <value>" ]
    5 [ label = "Unreachable" ]
    6 [ label = "return <value>" ]
    7 [ label = "Unreachable" ]
    8 [ label = "return <value>" ]
    9 [ label = "Unreachable" ]
    10 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    1 -> 2 [ label = Normal ]
    1 -> 3 [ label = Normal ]
    2 -> 3 [ label = Normal ]
    4 -> 5 [ label = Unreachable , style = "dotted" ]
    6 -> 7 [ label = Unreachable , style = "dotted" ]
    5 -> 8 [ label = Normal ]
    3 -> 4 [ label = Normal ]
    3 -> 6 [ label = Normal ]
    7 -> 8 [ label = Normal ]
    8 -> 9 [ label = Unreachable , style = "dotted" ]
    0 -> 10 [ label = Normal ]
}
