crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@index_into_object_with_symbol_as_arg.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/index_into_object_with_symbol_as_arg.js
---
digraph {
    0 [ label = "statement" ]
}
