crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@infix_operators.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/infix_operators.js
---
digraph {
    0 [ label = "statement\nstatement" ]
    1 [ label = "" ]
    2 [ label = "" ]
    0 -> 1 [ label = Normal ]
    0 -> 2 [ label = Normal ]
    1 -> 2 [ label = Normal ]
}
