crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@labeled_block_break.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/labeled_block_break.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = ""]
    3 [ label = ""]
    4 [ label = "Unreachable()\nbreak"]
    5 [ label = ""]
    6 [ label = ""]
    0 -> 1 [ ]
    0 -> 2 [ ]
    1 -> 2 [ ]
    3 -> 4 [ ]
    4 -> 5 [ ]
    2 -> 3 [ ]
    2 -> 5 [ ]
    3 -> 5 [ ]
    5 -> 6 [ ]
}
