crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@labelled_try_break.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/labelled_try_break.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = "return <value>"]
    3 [ label = ""]
    4 [ label = "Unreachable()"]
    5 [ label = "Unreachable()\nbreak"]
    6 [ label = "Unreachable()"]
    7 [ label = ""]
    8 [ label = "Unreachable()\nbreak"]
    9 [ label = "return <value>"]
    10 [ label = "Unreachable()"]
    11 [ label = ""]
    0 -> 1 [ ]
    1 -> 2 [ ]
    1 -> 3 [ ]
    4 -> 3 [ ]
    2 -> 4 [ ]
    4 -> 3 [ ]
    3 -> 5 [ ]
    5 -> 6 [ ]
    4 -> 7 [ ]
    7 -> 8 [ ]
    8 -> 9 [ ]
    3 -> 9 [ ]
    7 -> 9 [ ]
    9 -> 10 [ ]
    0 -> 11 [ ]
}
