crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@logical_expressions_short_circuit.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/logical_expressions_short_circuit.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "" ]
    4 [ label = "" ]
    5 [ label = "" ]
    6 [ label = "" ]
    7 [ label = "" ]
    8 [ label = "" ]
    9 [ label = "" ]
    10 [ label = "" ]
    11 [ label = "" ]
    12 [ label = "" ]
    0 -> 1 [ label = Normal ]
    0 -> 2 [ label = Normal ]
    1 -> 2 [ label = Normal ]
    3 -> 4 [ label = Normal ]
    2 -> 3 [ label = Normal ]
    2 -> 4 [ label = Normal ]
    4 -> 5 [ label = Normal ]
    4 -> 6 [ label = Normal ]
    5 -> 6 [ label = Normal ]
    7 -> 8 [ label = Normal ]
    6 -> 7 [ label = Normal ]
    6 -> 8 [ label = Normal ]
    8 -> 9 [ label = Normal ]
    8 -> 10 [ label = Normal ]
    9 -> 10 [ label = Normal ]
    11 -> 12 [ label = Normal ]
    10 -> 11 [ label = Normal ]
    10 -> 12 [ label = Normal ]
}
