crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@member_access_with_numbered_index.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/member_access_with_numbered_index.js
---
digraph {
    0 [ label = ""]
    1 [ label = "return <value>"]
    2 [ label = ""]
    3 [ label = "Unreachable()\nreturn <value>"]
    4 [ label = ""]
    5 [ label = "Unreachable()"]
    6 [ label = ""]
    0 -> 1 [ ]
    2 -> 3 [ ]
    4 -> 5 [ ]
    0 -> 6 [ ]
}
